codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__plugins_popup_curated_marketplace.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  Plugins
  Browse plugins from available marketplaces.
  Installed 1 of 4 available plugins.
  Using cached marketplace data: remote sync timed out

  Type to search plugins
› Alpha Sync          Installed · Disabled   Press Enter to view plugin details.
  Bravo Search        Available            · ChatGPT Marketplace · Search docs and tickets.
  Hidden Repo Plugin  Available            · Repo Marketplace · Should not be shown in /plugins.
  Starter             Available by default · ChatGPT Marketplace · Included by default.

  Press esc to close.
