codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__plugins_popup_search_filtered.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  Plugins
  Browse plugins from available marketplaces.
  Installed 0 of 3 available plugins.

  sla
› Slack  Available · Press Enter to view plugin details.

  Press esc to close.
