codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__post_tool_use_hook_events_render_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: combined
---
• Running PostToolUse hook: warming the shell

PostToolUse hook (completed)
  warning: Heads up from the hook
  hook context: Remember the startup checklist.
